--- a/index.html
+++ b/index.html
@@ -91,6 +91,71 @@
         </div>
     </div>
     <!-- End Hero -->
+
+    <!-- Grid -->
+    <div class="container px-4 py-5" id="About">
+        <h2 class="pb-2 border-bottom">About</h2>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                <figure>
+                    <img src="https://img.wongnai.com/p/1600x0/2019/02/01/698a5dd606ec420ebcc27d4d59c9eb14.jpg"
+                        class="img-fluid" alt="บางแสน">
+                    <figcaption>บางแสน</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                <figure>
+                    <img src="https://img.wongnai.com/p/1600x0/2021/10/20/f4ed9e2a7e764de1b13156aed085e462.jpg"
+                        class="img-fluid" alt="แกรนด์แคนยอน">
+                    <figcaption>แกรนด์แคนยอน</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                <figure>
+                    <img src="https://img.wongnai.com/p/1600x0/2019/02/01/5f23c66b94504c8cb290220dd64fa99d.jpg"
+                        class="img-fluid" alt="เกาะขาม">
+                    <figcaption>เกาะขาม</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                <figure>
+                    <img src="https://img.wongnai.com/p/1600x0/2019/02/01/1b25f919715a4ac58e2df815a015e441.jpg"
+                        class="img-fluid" alt="หาดนางรำ">
+                    <figcaption>หาดนางรำ</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                <figure>
+                    <img src="https://img.wongnai.com/p/1600x0/2019/02/01/6fb6efc0508c4edb8fbd03afe44ebd7f.jpg"
+                        class="img-fluid" alt="สวนสัตว์เปิดเขาเขียว">
+                    <figcaption>สวนสัตว์เปิดเขาเขียว</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                <figure>
+                    <img src="https://img.wongnai.com/p/1600x0/2019/02/01/483318615c624aff841e227cb76cdb36.jpg"
+                        class="img-fluid" alt="อ่างเก็บน้ำบางพระ">
+                    <figcaption>อ่างเก็บน้ำบางพระ</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                <figure>
+                    <img src="https://img.wongnai.com/p/1600x0/2019/02/01/8c581db9ce934c86aaa996911f062a08.jpg"
+                        class="img-fluid" alt="ปราสาทสัจธรรม">
+                    <figcaption>ปราสาทสัจธรรม</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                <figure>
+                    <img src="https://img.wongnai.com/p/1600x0/2019/02/01/1e06755c73e94c2daff417a7155f9247.jpg"
+                        class="img-fluid" alt="แหลมบาลีฮาย">
+                    <figcaption>แหลมบาลีฮาย</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+    <!-- End Grid -->
+     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
