--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Detail.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -220,12 +220,12 @@
                 <h5 class="mb-3">Social</h5>
                 <ul class="nav justify-content-center list-unstyled d-flex">
                     <li class="ms-3">
-                        <a class="text-body-secondary" href="#">
+                        <a class="text-body-secondary" href="https://www.instagram.com/wrcy.s/?hl=en">
                             <i class="bi bi-instagram fs-3"></i>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a class="text-body-secondary" href="#">
+                        <a class="text-body-secondary" href="https://www.facebook.com/inkjett.1">
                             <i class="bi bi-facebook fs-3"></i>
                         </a>
                     </li>
@@ -236,8 +236,8 @@
                 <h5>Menu</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary">Home</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Contact</a></li>
+                    <li class="nav-item mb-2"><a href="about.html" class="nav-link p-0 text-body-secondary">About</a></li>
+                    <li class="nav-item mb-2"><a href="contact.html" class="nav-link p-0 text-body-secondary">Contact</a></li>
                 </ul>
             </div>
         </footer>
