--- a/Contact.html
+++ b/Contact.html
@@ -1,55 +1,139 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header">
-        <h1>ช่องทางการติดต่อ</h1>
-        <nav>
-            <div class="nav-container">
-                <ul class="nav-list">
-                    <li><a href="Home.html">Home</a></li>
-                    <li><a href="Detail.html">Detail</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Travel</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
                 </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
             </div>
-        </nav>
-    </header>
-    <main>
-        <form class="content-box" action="/submit" method="POST" role="form" aria-label="แบบฟอร์มติดต่อ">
-            <div class="form-group">
-                <label for="fullname">ชื่อ-นามสกุล *</label>
-                <input type="text" id="fname" name="firstname" placeholder="กรุณากรอกชื่อและนามสกุลจริง">
+        </div>
+    </nav>
+    <!-- End Navbar -->
+
+    <!-- Contact -->
+    <div class="container px-4 py-5" id="Contact">
+        <h2 class="pb-2 border-bottom">Contact</h2>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Contact Me
+        </button>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Contact Me</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email Address</label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter your email"
+                                    required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="message" class="form-label">Message</label>
+                                <textarea class="form-control" id="message" rows="5"
+                                    placeholder="Type your message here..." required></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="email">อีเมล *</label>
-                <input type="text" id="email" name="email" placeholder="ตัวอย่าง: example@domain.com">
-            </div>
-            <div class="form-group">
-                <label for="tel">เบอร์โทรศัพท์ *</label>
-                <input type="text" id="tel" name="tel" pattern="[0-9]{10}"
-                    placeholder="กรอกหมายเลข 10 หลัก ไม่ต้องมีขีด เช่น 0812345678">
-            </div>
-            <div class="form-group">
-                <label for="message">ข้อความ *</label>
-                <input type="text" id="message" name="message" placeholder="กรุณากรอกข้อความอย่างน้อย 10 ตัวอักษร">
-            </div>
-            <div class="form-group">
-                <button type="submit" aria-label="ส่งข้อความ">
-                    ส่งข้อความ</button>
+        </div>
+    </div>
+    <!-- End Contact -->
+
+    <!-- Footer -->
+    <div class="container">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
+            <div class="col mb-3">
+                <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a>
+                <p class="text-body-secondary">© 66160151@go.buu.ac.th</p>
             </div>
 
-        </form>
-    </main>
+            <div class="col mb-3">
+
+            </div>
+
+            <div class="col mb-3">
+
+            </div>
+
+            <div class="col mb-3 d-flex flex-column align-items-center">
+                <h5 class="mb-3">Social</h5>
+                <ul class="nav justify-content-center list-unstyled d-flex">
+                    <li class="ms-3">
+                        <a class="text-body-secondary" href="https://www.instagram.com/wrcy.s/?hl=en">
+                            <i class="bi bi-instagram fs-3"></i>
+                        </a>
+                    </li>
+                    <li class="ms-3">
+                        <a class="text-body-secondary" href="https://www.facebook.com/inkjett.1">
+                            <i class="bi bi-facebook fs-3"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col mb-3">
+                <h5>Menu</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary">Home</a>
+                    </li>
+                    <li class="nav-item mb-2"><a href="about.html" class="nav-link p-0 text-body-secondary">About</a>
+                    </li>
+                    <li class="nav-item mb-2"><a href="contact.html"
+                            class="nav-link p-0 text-body-secondary">Contact</a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+    <!-- End Footer -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
-<footer role="contentinfo">
-    <p>&copy; 66160151@go.buu.ac.th</p>
-</footer>
 
 </html>
